mdapipkg/unpackaged/objects/EAS_LMS_Summary__c.object
<CustomObject>
    <fields>
        <fullName>Account_Id__c</fullName>
        <label>Account Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Num_Of_Min__c</fullName>
        <label>Number Of Minutes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Num_of_Msg__c</fullName>
        <label>Number of Messages</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Seq_Number__c</fullName>
        <label>Sequence Number</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>library_id__c</fullName>
        <label>library id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>EAS/LMS Summary</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>EAS/LMS Summary Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EAS/LMS Summarys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>